--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,16 +12,32 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: sudo apt-get update && sudo apt -y install python3-pip
-      - run: pip install conan
-      - run: mkdir build
-      - run: cd build
-      - run: conan profile update settings.compiler.libcxx=libstdc++11 default
-      - run: conan install ..
-      - run: cmake cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DTEST=true -DDEBPACK -DPATCH_VERSION=${{ github.run_number }} ..
-      - run: cmake --build .
-      - run: cmake --build . --target test
-      - run: cmake --build . --target package
+      
+      - name: Prepair system
+        run: sudo apt-get update && sudo apt -y install python3-pip
+        run: pip install conan
+     
+      - name: Create conan default profile
+        run: conan profile new default --detect
+      
+      - name: Update conan profile
+        run: conan profile update settings.compiler.libcxx=libstdc++11 default
+      
+      - name: Prepair build
+        run: mkdir build
+        run: cd build
+        run: conan install ..  --install-folder=${{github.workspace}}/build
+
+      - name: Build
+        run: cmake cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DTEST=true -DDEBPACK -DPATCH_VERSION=${{ github.run_number }} ..
+        run: cmake --build .
+      
+      - name: Tests
+        run: cmake --build . --target test
+ 
+      - name: Create package
+        run: cmake --build . --target package
+ 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
