--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,7 @@ jobs:
           submodules: true
       
       - name: Prepair system
-        run: sudo apt-get update && sudo apt -y install python3-pip
-        run: pip install conan
+        run: sudo apt-get update && sudo apt -y install python3-pip &&  pip install conan
      
       - name: Create conan default profile
         run: conan profile new default --detect
@@ -24,13 +23,10 @@ jobs:
         run: conan profile update settings.compiler.libcxx=libstdc++11 default
       
       - name: Prepair build
-        run: mkdir build
-        run: cd build
-        run: conan install ..  --install-folder=${{github.workspace}}/build
+        run: mkdir build && cd build && conan install ..  --install-folder=${{github.workspace}}/build
 
       - name: Build
-        run: cmake cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DTEST=true -DDEBPACK -DPATCH_VERSION=${{ github.run_number }} ..
-        run: cmake --build .
+        run: cmake cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DTEST=true -DDEBPACK -DPATCH_VERSION=${{ github.run_number }} .. && cmake --build .
       
       - name: Tests
         run: cmake --build . --target test
