--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,25 +14,19 @@ jobs:
           submodules: true
       
       - name: Prepair system
-        run: sudo apt-get update && sudo apt -y install python3-pip &&  pip install conan
-     
-      - name: Create conan default profile
-        run: conan profile new default --detect
-      
-      - name: Update conan profile
-        run: conan profile update settings.compiler.libcxx=libstdc++11 default
+        run: sudo apt-get update && sudo apt -y install python3-pip && pip install conan && conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
       
       - name: Prepair build
-        run: mkdir build && cd build && ls .. && conan install ..
+        run: mkdir build && cd build && conan install ..
 
       - name: Build
-        run: cd build && ls .. && cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DTEST=true -DDEBPACK=true -DPATCH_VERSION=${{ github.run_number }} .. && cmake --build .
+        run: cd build && cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DTEST=true -DDEBPACK=true -DPATCH_VERSION=${{ github.run_number }} .. && cmake --build .
       
       - name: Tests
-        run: cmake --build . --target test
+        run: cd build && cmake --build . --target test
  
       - name: Create package
-        run: cmake --build . --target package
+        run: cd build && cmake --build . --target package
  
       - name: Create Release
         id: create_release
@@ -51,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.IP_SECRET }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ip_worker-0.1.${{ github.run_number }}-Linux.deb
+          asset_path: ./build/ip_worker-0.1.${{ github.run_number }}-Linux.deb
           asset_name: ip_worker-0.1.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
